# MuJoCo-LiDAR

./: .gitignore  CLAUDE.md  Makefile  README.md  README_zh.md  mesh_test_hit_points.npy  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
docs/: INSTALLATION.md
docs/en/: DEVELOPMENT.md  USAGE.md
docs/zh_CN/: INSTALLATION.md  USAGE.md
examples/: example_gpu.py  example_jax.py  example_mjcf.py  example_native.py  go2_ros2.py  lidar_vis_o3d.py  lidar_vis_ros1.py  lidar_vis_ros1_wrapper.py  lidar_vis_ros2.py  lidar_vis_ros2_wrapper.py  mesh_bvh_test.py  test_hfield.py  test_speed.py  unitree_g1_ros2.py  unitree_go2.py
models/: demo.xml  scene.xml  scene_go2.xml  stairs_terrain.xml
models/unitree_g1/: g1_mjx_feetonly.xml
models/unitree_go2/: go2_mjx.xml
mujoco_lidar/: __init__.py  core.py  core_cpu.py  lidar_scanner.py  lidar_wrapper.py  mj_lidar_utils.py  scan_gen.py  scan_gen_livox_ti.py
mujoco_lidar/core/: lidar_wrapper.py  mesh_tracer.py
mujoco_lidar/core_cpu/: mjlidar_cpu.py
mujoco_lidar/core_jax/: __init__.py  geometry.py  mjlidar_jax.py
mujoco_lidar/core_ti/: mjlidar_ti.py
mujoco_lidar/examples/: example_mjcf.py  example_string.py  lidar_vis_ros2.py  test_speed.py
mujoco_lidar/geometry/: geom_intersection.py
mujoco_lidar/lbvh/: lbvh.py
mujoco_lidar/tests/: mesh_test.py
src/mujoco_lidar/: lidar_wrapper.py  scan_gen.py
src/mujoco_lidar/core_cpu/: mjlidar_cpu.py
src/mujoco_lidar/core_jax/: mjlidar_jax.py
src/mujoco_lidar/core_ti/: mjlidar_ti.py
