[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mujoco_lidar"
version = "0.2.1"
authors = [
    {name = "Yufei Jia", email = "jyf23@mails.tsinghua.edu.cn"}
]
description = "A LiDAR sensor designed for MuJoCo"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.20.0",
    "mujoco >= 3.2.0",
    "scipy",
    "pynput",
    "matplotlib",
    "zhplot",
]

[project.optional-dependencies]
# GPU backend with all dependencies (taichi, tibvh, and utilities)
gpu = [
    "taichi >= 1.6.0",
    "tibvh @ git+https://github.com/TATP-233/tibvh.git",
]

[project.urls]
Homepage = "https://github.com/TATP-233/MuJoCo-LiDAR.git"
Repository = "https://github.com/TATP-233/MuJoCo-LiDAR.git"

[tool.setuptools]
packages = ["mujoco_lidar"]

[tool.setuptools.package-data]
"mujoco_lidar" = ["scan_mode/*.npy"]
